最基本的登录完成

--- a/myBBS/operation/src/main/resources/application.yml
+++ b/myBBS/operation/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: operation
+  redis:
+    host: 58.87.122.18
+    port: 30040
 eureka:
   client:
     service-url:
