修复没有 评价 空指针

--- a/myBBS/tast/src/main/resources/application.yml
+++ b/myBBS/tast/src/main/resources/application.yml
@@ -19,18 +19,18 @@ feign:
         readTimeout: 20000  # 指定的是调用服务提供者的 服务 的超时时间（）  单位是毫秒
 
 #hystrix 配置
-hystrix:
-  command:
-    default:
-      execution:
-        timeout:
-          #如果enabled设置为false，则请求超时交给ribbon控制
-          enabled: true
-        isolation:
-          strategy: SEMAPHORE
-          thread:
-            # 熔断器超时时间，默认：1000/毫秒
-            timeoutInMilliseconds: 20000
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        timeout:
+#          #如果enabled设置为false，则请求超时交给ribbon控制
+#          enabled: true
+#        isolation:
+#          strategy: SEMAPHORE
+#          thread:
+#            # 熔断器超时时间，默认：1000/毫秒
+#            timeoutInMilliseconds: 20000
 #请求处理的超时时间
 ribbon:
   ReadTimeout: 4000
